--- a/client/index.html
+++ b/client/index.html
@@ -122,7 +122,7 @@
     <div class="panel" id="connection">
       <div class="error-div hidden no-margin red" id="error-div">Hey</div>
       <input type="text" id="username" placeholder="Insert Username"><br>
-      <input type="text" id="address" placeholder="Input Server Address" value="islandr:8000"><br>
+      <input type="text" id="address" placeholder="Input Server Address" value="islandr.io:8000"><br>
       <div class="button" id="connect">Play</div>
       <div class="box-selectable">
         <div class="box-squad">
@@ -170,7 +170,7 @@
       <br>
       HeheBoi420 (from Discord) (co-developer)<br>
       <br>
-      @hmm (co-developer)<br>
+      @hmm (deployment/co-developer)<br>
       <br>
       Wef324 (from Discord) (fellow developer)<br>
       <br>
